--- a/src/p1/mainWindow.form
+++ b/src/p1/mainWindow.form
@@ -261,6 +261,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtKeyboardKeyPressed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
