--- a/src/p1/mainWindow.form
+++ b/src/p1/mainWindow.form
@@ -315,10 +315,11 @@
             </LineBorder>
           </Border>
         </Property>
+        <Property name="autoscrolls" type="boolean" value="true"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="10" y="370" width="330" height="-1"/>
+          <AbsoluteConstraints x="10" y="370" width="330" height="300"/>
         </Constraint>
       </Constraints>
 
@@ -330,9 +331,6 @@
               <Color blue="33" green="2f" red="2c" type="rgb"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value=""/>
-            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[310, 298]"/>
-            </Property>
           </Properties>
 
           <Layout>
@@ -343,7 +341,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="298" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="294" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
